# jenkins-mcp-server

./: .gitignore  Jenkinsfile  README.md  example.py  pyproject.toml
jenkins_mcp/: Jenkinsfile  __init__.py  config.py  server.py
tests/: test_server.py
