[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jenkins-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server for Jenkins integration"
authors = [{name = "Jenkins MCP", email = "jenkins@example.com"}]
requires-python = ">=3.8"
dependencies = [
    "mcp>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["jenkins_mcp"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
